--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="20">
-     <td><img src="my_photo-modified.png" alt="Guy profile picture"></td>
+     <td><img src="images/my_photo-modified.png" alt="Guy profile picture"></td>
      <td><h1>Berger Guy</h1>
      <p><em>Software Engineer | <a href="contact.html">Contact Me</a></em></p>
      <p>Passion about technology and learning new things</p></td>
