--- a/contact.html
+++ b/contact.html
@@ -8,24 +8,24 @@
     <h2>My Contact Information</h2>
     <table>
       <tr>
-        <td><img src="phone.png" alt="phone number"></td>
+        <td><img src="images/phone.png" alt="phone number"></td>
         <td>053-2772399</td>
       </tr>
       <tr>
-        <td><img src="mail.png" alt="mail info"></td>
+        <td><img src="images/mail.png" alt="mail info"></td>
         <td>bergerguy@gmail.com</td>
       </tr>
       <tr>
         <td>Linked</td>
-        <td><a href="https://www.linkedin.com/in/berger-guy/"><img src="linkedin_image.png" alt="linkedIn site"></a>
+        <td><a href="https://www.linkedin.com/in/berger-guy/"><img src="images/linkedin_image.png" alt="linkedIn site"></a>
       </tr>
       <tr>
         <td>GitHub</td>
-        <td><a href="https://github.com/guyb2022"><img src="git_image.png" alt="git site"></a></td>
+        <td><a href="https://github.com/guyb2022"><img src="images/git_image.png" alt="git site"></a></td>
       </tr>
       <tr>
         <td>Blogger</td>
-        <td><a href="https://peopleandconnections.blogspot.com/"><img src="blogpost.png" alt="blogger site"></a></td>
+        <td><a href="https://peopleandconnections.blogspot.com/"><img src="images/blogpost.png" alt="blogger site"></a></td>
       </tr>
     </table>
     <br>
